# mediadevice

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: side_nav_bar.xml
app/src/main/res/layout/: app_bar_main.xml  camera_list_item.xml  content_main.xml  fragment_camera_list.xml  fragment_camera_list_dialog_add_camera.xml  fragment_settings.xml  fragment_settings_dialog_modify_account.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/values/: drawables.xml  strings.xml
baseview/: build.gradle
baseview/src/main/: AndroidManifest.xml
baseview/src/main/res/anim/: right_in.xml  rotate.xml
baseview/src/main/res/drawable/: checkbox_blue.xml  custom_dialog_bg_bottom.xml  custom_dialog_bg_middle.xml  custom_dialog_bg_title.xml  custom_dialog_extra_button.xml  custom_dialog_negative_button.xml  custom_dialog_positive_button.xml  custom_edittext_bg.xml  custom_edittext_login_selector.xml  custom_edittext_switch_back_on_selector.xml  linearlayout_bottom_select.xml  linearlayout_bottom_selector.xml  linearlayout_mid_selector.xml  linearlayout_single_select.xml  linearlayout_single_selector.xml  linearlayout_top_select.xml  linearlayout_top_selector.xml  note_login_register_eye.xml  popmenu_item_bg.xml  shape_ellipse.xml
baseview/src/main/res/layout/: custom_dialog_layout.xml  popmenu.xml  (+5 more)
data/: build.gradle
data/src/main/: AndroidManifest.xml
dependencies/ffplay/android/contrib/: compile-ffmpeg.sh  compile-polarssl.sh  compile-rtmpdump.sh  url_read.txt  url_write.txt
dependencies/ffplay/config/: module-lite-rtsp.sh  module-lite.sh
domain/: build.gradle
domain/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle
libonvif/: build.gradle
libonvif/src/main/: AndroidManifest.xml
onvif/: build.gradle
onvif/src/main/: AndroidManifest.xml
onvif/src/main/cpp/: CMakeLists.txt  native-lib.cpp
onvif/src/main/cpp/ijkffmpeg/include/: platform.h
onvif/src/main/cpp/ijkffmpeg/include/libavformat/: avformat.h
onvif/src/main/cpp/onvif_find/: main.c  soapClient.c  stdsoap2.c
onvif/src/main/cpp/onvif_find/include/: onvif.h  soapStub.h  stdsoap2.h
onvif/src/main/cpp/rtmp/: Mybs.c  Mybs.h  RTMPMetadata.h  data.c  data.h  rtmp.c  video.c  video.h
(+341 files in other folders)
